# thai-procurement-intelligence

./: .env.example  .gitignore  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  package-lock.json  package.json  thai_public_procurement_intelligence_spec_and_codex_prompt.txt  vercel.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_official_provenance.py
apps/api/app/: config.py  database.py  main.py  models.py  schemas.py
apps/api/app/data_sources/: base.py  csv_importer.py  egp_contract.py  excel_importer.py  open_api_importer.py
apps/api/app/jobs/: batch_summarize.py  evaluate_official_snapshot.py  fetch_source.py  generate_embeddings.py  import_csv.py  import_official_snapshot.py
apps/api/app/prompts/: extraction.txt  qa.txt  summary.txt
apps/api/app/routers/: analytics.py  assistant.py  dataset.py  export.py  health.py  ingestion.py  records.py
apps/api/app/services/: analytics.py  embeddings.py  ingestion.py  normalization.py  provenance.py  rate_limit.py  search.py
apps/api/app/services/llm/: base.py  factory.py  gemini.py  mock.py  openrouter.py
apps/api/tests/: conftest.py  test_acquisition.py  test_api.py  test_database.py  test_export.py  test_ingestion.py  test_official_snapshot.py  test_sample_dataset.py
docs/: architecture.md  data-source.md  data_provenance.md  data_quality.md  deployment.md  limitations.md  local_review.md  official_snapshot.md  official_source_adapter.md  prompts.md  (+8 more)
(+43 files in other folders)
