[project]
name = "thai-procurement-intelligence-api"
version = "0.1.0"
description = "FastAPI backend for Thai Public Procurement Intelligence"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.17.2",
  "fastapi>=0.124.2",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
